--- a/Ansible1/2.Nginx Install.yaml
+++ b/Ansible1/2.Nginx Install.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.dnf:
       name: nginx
       state: present
-  - name: Start Nginx
+  - name: start nginx
     ansible.builtin.service:
       name: nginx
       state: started
