--- a/Ansible1/2.Nginx Install.yaml
+++ b/Ansible1/2.Nginx Install.yaml
@@ -1,4 +1,4 @@
-- name: This is used for Ping Test
+- name: Nginx Installation
   hosts: web
   become: yes # It is same as -b in adhoc commands for root user access
   tasks: #List of Tasks
@@ -10,5 +10,5 @@
     ansible.builtin.service:
       name: nginx
       state: started
-      enable: yes
+      enabled: yes
 
