--- a/Ansible1/3.muti-play.yaml
+++ b/Ansible1/3.muti-play.yaml
@@ -1,11 +1,17 @@
-- name: multi play
+- name: Play 1
   hosts: localhost
   tasks:
-  - name: play 1
+  - name: play 1 and task 1
     ansible.builtin.debug:
       msg: "Hi i am from play 1 and Task 1"
-  - name: play 2
+
+- name: Play 2
+  hosts: localhost
+  tasks:
+  - name: play 2 and task 1
     ansible.builtin.debug:
-      msg: "Hi this id from play 2 and Task 1"
+      msg: "Hi i am from play 2 and Task 1"
+
+
     
   
