--- a/Ansible1/7.vars-promt.yaml
+++ b/Ansible1/7.vars-promt.yaml
@@ -1,13 +1,13 @@
 - name: varables with prompt
   hosts: localhost
   vars_prompt:
-    - name: USERNAME
-      prompt: please enter username
-      private: false
-    - name: PASSWORD
-      prompt: please enter password
-      private: true
-    
+  - name: USERNAME
+    prompt: please enter username
+    private: false
+  - name: PASSWORD
+    prompt: please enter password
+    private: true
+  tasks:
     - name: print information
       ansible.builtin.debug:
         msg: "enter USERNAME {{USERNAME}} and PASSWORD {{PASSWORD}}"
