--- a/Ansible1/inventory.ini
+++ b/Ansible1/inventory.ini
@@ -1,13 +1,24 @@
-172.31.24.123
-
+172.31.16.154
 [web]
-172.31.24.121
+172.31.25.43
+
+[web:vars]
+DB_URL="http://db.daws78s.online"
+
+[localhost]
+localhost
+
+[localhost:vars]
+#Course="DevOps with AWS"
+#Trainer="Sivakumar"
+#Duration="120hrs"
+#WISHES="Morning from inventory"
 
 [db]
-172.31.24.125
+172.31.16.152
 
 [app]
-172.31.24.125
+172.31.16.153
 
 [all:children]
 web
