--- a/Ansible1/vars.yaml
+++ b/Ansible1/vars.yaml
@@ -1,3 +1,4 @@
-Course: "AWS"
-Trainer: "Surya"
-Duration: "120Hrs"
+Course: "DevOps with AWS"
+Trainer: "Sivakumar Reddy M"
+Duration: "3.5 Months"
+#WISHES: "Morning from variable file"
