--- a/Ansible1/vars.yaml
+++ b/Ansible1/vars.yaml
@@ -1,4 +1,4 @@
 Course: "DevOps with AWS"
 Trainer: "Sivakumar Reddy M"
-Timings: "3.5 Months"
+Duration: "3.5 Months"
 #WISHES: "Morning from variable file"
