--- a/Ansible1/inventory.ini
+++ b/Ansible1/inventory.ini
@@ -9,10 +9,10 @@ DB_URL="http://db.daws78s.online"
 localhost
 
 [localhost:vars]
-#Course="DevOps with AWS"
-#Trainer="Sivakumar"
-#Duration="120hrs"
-#WISHES="Morning from inventory"
+Course="DevOps with AWS"
+Trainer="Sivakumar"
+Duration="120hrs"
+WISHES="Morning from inventory"
 
 [db]
 172.31.16.152
