--- a/Ansible1/inventory.ini
+++ b/Ansible1/inventory.ini
@@ -5,8 +5,8 @@
 #[web:vars]
 #DB_URL="http://db.daws78s.online"
 
-[localhost]
-localhost
+#[localhost]
+#localhost
 
 [localhost:vars]
 Course="DevOps with AWS"
