--- a/Ansible1/inventory.ini
+++ b/Ansible1/inventory.ini
@@ -1,12 +1,11 @@
-#172.31.16.154
-#[web]
-#172.31.25.43
-#
-#[web:vars]
-#DB_URL="http://db.daws78s.online"
+172.31.16.154
+[web]
+172.31.25.43
 
-#[localhost]
-#localhost
+[web:vars]
+DB_URL="http://db.daws78s.online"
+[localhost]
+localhost
 
 [localhost:vars]
 Course="DevOps with AWS"
